# gpusssp

./: .clang-format  .clang-tidy  .gitignore  AGENT.md  AGENTS.md  CMakeLists.txt  EXPERIMENTS.md  LICENSE.TXT  Makefile  README.md  main.cpp
.github/workflows/: ci.yml
.opencode/agents/: labrat.md
ci/: integration_test.sh
cmake/: FindProtozero.cmake
docs/: NAMING_CONVENTIONS.md
experiments/: README.md  compare.py  compare_results.ipynb  experiment_bellmanford.cpp  experiment_deltastep.cpp  experiment_dial.cpp  experiment_dijkstra.cpp  experiment_nearfar.cpp  experiment_throughput.cpp  experiment_util.hpp  generate_queries.cpp  plot.py  queries.hpp  run_experiments.py  xps.py
experiments/evaluation/: __init__.py  validate.py
experiments/plots/: __init__.py  histogram.py  rank.py
experiments/xps/: __init__.py  add.py  cli.py  compare.py  create.py  discovery.py  errors.py  gitops.py  grid.py  paths.py  plot.py  run.py  runner.py  update.py  validation.py
include/common/: adj_graph.hpp  benchmark.hpp  binary.hpp  bucket_queue.hpp  circular_vector.hpp  cli.hpp  constants.hpp  coordinate.hpp  csv.hpp  dial.hpp  dijkstra.hpp  dijkstra_private.hpp  dyn_graph.hpp  edge.hpp  files.hpp  graph_metrics.hpp  graph_transform.hpp  id_queue.hpp  irange.hpp  lazy_clear_vector.hpp  logger.hpp  nearest_neighbour.hpp  path.hpp  progress_bar.hpp  queue.hpp  serialization.hpp  shader.hpp  statistics.hpp  string_util.hpp  timed_logger.hpp  web_mercator.hpp  weighted_graph.hpp  zorder.hpp
include/gpu/: bellmanford.hpp  bellmanford_buffers.hpp  coordinates_buffer.hpp  debug.hpp  deltastep.hpp  deltastep_buffers.hpp  device_info.hpp  graph_buffers.hpp  memory.hpp  nearfar.hpp  nearfar_buffers.hpp  shader.hpp  shared_queue.hpp  statistics.hpp  tracer.hpp  vulkan_context.hpp  vulkan_graphics_context.hpp
include/preprocessing/: import_osm.hpp
shaders/: bellman_ford.comp  bit_vector.glsl  delta_step.comp  deltastep_prepare_dispatch.comp  nearfar_compact.comp  nearfar_constants.glsl  nearfar_prepare_dispatch.comp  nearfar_relax.comp  node_color.comp  project_coordinates.comp  statistics.glsl  visualize_node.frag  visualize_node.vert
src/: bellman_ford.comp  delta_step.comp  extract_minimal_graph.cpp  gpusssp.cpp  graph_reorder.cpp  nearfar_relax.comp  osm2graph.cpp  visualize_graph.cpp
src/common/: logger.cpp
tests/: grid_graph.hpp  mock_graph.hpp  test_bucket_queue.cpp  test_circular_vector.cpp  test_deltastep.cpp  test_dial.cpp  test_graph_metrics.cpp  test_main.cpp  test_nearfar.cpp  test_string_util.cpp  test_zorder.cpp  vulkan_test_fixture.hpp
